correct link given

--- a/video.html
+++ b/video.html
@@ -5,7 +5,7 @@
 </head>
 <body p align="center" style="background-image: url(./images/one_cam.png);" style = position:absolute;  top:650px;></p>
         <video width="800"  controls>
-        <source src="video.mp4" type="video/mp4"> 
+        <source src="images/summary.mp4" type="video/mp4"> 
     </video>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Add icon library -->
@@ -28,7 +28,7 @@
     </style>
     </head>
     <body>
-        <a href="summary.mp4" download="summary_video">
+        <a href="images/summary.mp4" download="summary_video">
             <button class="btn"  style = "position:absolute; left:850px; top:550px;"></i> Download</button>
     <!-- <button class="btn"  style = "position:absolute; left:800px; top:550px;"></i> Submit </button> -->
 </body>
